@@ -45,7 +45,8 @@ EXTRA_DIST = \
     rts2-plan.xml \
     rts2-selector.xml \
     rts2-queue.xml \
-    rts2.queue.xml
+    rts2.queue.xml \
+    rts2-imgproc.xml
 
 CLEANFILES = *.1 *.5 *.7
 
@@ -95,7 +96,8 @@ man_MANS = \
     rts2-plan.1 \
     rts2-selector.7 \
     rts2-queue.1 \
-    rts2.queue.5
+    rts2.queue.5 \
+    rts2-imgproc.7
 
 XP=xsltproc --nonet
 
