@@ -1,3 +1,6 @@
+2011-10-25
+ * added corrwerr command (for image processing scripts)
+
 2011-10-06
  * telescope model parameters visible in telescope device
 
